# IMURI

./: .gitignore  CMakeLists.txt  README.md  main.cpp
docs/rap_structure/: RAP_format.vsdx  rap_structure.odt
source/csl/administrator/: administrator.cpp  administrator.h
source/csl/mobility_policy_manager/: mobility_policy_manager.h
source/csl/monitor/: monitor.h
source/csl/networking_stack/: networking_stack.h
source/error_codes/: error_codes.h
source/file_manager/: file_manager.cpp  file_manager.h
source/imuri/: access_control_services.h  administrative_services.h  data_flow_services.h  imuri.h
source/md5/: md5.cpp  md5.h
source/radio_app/: radio_app.cpp  radio_app.h
source/radio_app/ra_option/: ra_option.h
source/radio_app/ra_option_id/: ra_option_id.h
source/radio_app/ra_parameter/: ra_parameter.h
source/radio_app/radio_app_status/: radio_app_status.h
source/radio_computer/: radio_computer.cpp  radio_computer.h
source/radio_package/rap_format/date/: date.h
source/radio_package/rap_format/rap_header/: radio_lib_descriptor.h  rap_descriptor.h  rap_header.h  rap_structure_descriptor.h  target_platform_descriptor.h
source/rap/: date.h  padding_bit.h  rap_header.h  ura_code_section.h
source/rcf/configuration_manager/: configuration_manager.cpp  configuration_manager.h
source/rcf/flow_controller/: flow_controller.h
source/rcf/multi_radio_controller/: multi_radio_controller.h
source/rcf/radio_connection_manager/: radio_connection_manager.h
source/rcf/resource_manager/: resource_manager.h
source/zip/: zip.cpp  zip.h
tests/md5/: test.cpp
